examples/test/testpolicy11665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11665
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key25: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value5
          key48: value27
          key40: value30
      podSelector:
        matchLabels:
          key5: value29
